# Dynamic-Resume-Generator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  demo.json  main.py  new_main.py  pyproject.toml  requirements.txt  schemas.py
fonts/: ALEE_copyright.txt  FireFly_COPYRIGHT.txt  indic_copyright.txt  thai_tlwg_copyright.txt
resume_generator/: __init__.py  main.py  schemas.py
resume_generator/sections/: __init__.py  articles.py  awards.py  base.py  certifications.py  education.py  general.py  jobs.py  languages.py  projects.py  volunteering.py
resume_generator/styles/: __init__.py  modern.py
tests/: test_demo_json.py  test_resume_generator.py
